--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,37 @@
-altair==4.2.0
-altgraph @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
 annotated-types==0.6.0
 anyio==4.3.0
 appdirs==1.4.4
-argcomplete==2.0.0
-argon2-cffi-bindings==21.2.0
 asgiref==3.7.2
-attrs==22.2.0
-blinker==1.5
-cachetools==5.2.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
-commonmark==0.9.1
-cryptography==38.0.4
-decorator==5.1.1
-entrypoints==0.4
-exceptiongroup==1.2.0
 fastapi==0.108.0
-future @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-gitdb==4.0.10
-GitPython==3.1.29
-greenlet==2.0.0.post0
+future==1.0.0
 h11==0.14.0
 htmltools==0.5.1
-idna==3.4
-importlib-metadata==5.2.0
-Jinja2==3.1.2
-jsonschema==4.17.3
+idna==3.6
 linkify-it-py==2.0.3
-lxml==4.9.1
+loguru==0.7.2
 lzstring==1.0.4
-macholib @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
 markdown-it-py==3.0.0
-MarkupSafe==2.1.1
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
-numpy==1.24.0
-packaging==21.3
-pandas==1.5.2
-Pillow==9.3.0
-pipx==1.1.0
+packaging==23.2
 prompt-toolkit==3.0.36
-protobuf==3.20.3
-pyarrow==10.0.1
-pycparser==2.21
-pydantic==2.6.3
+pydantic==1.10.14
 pydantic_core==2.16.3
-pydeck==0.8.0
-Pygments==2.13.0
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.2
-python-dateutil==2.8.2
 python-multipart==0.0.9
-pytz==2022.7
-pytz-deprecation-shim==0.1.0.post0
 questionary==2.0.1
-rich==12.6.0
-semver==2.13.0
+requests==2.31.0
 shiny==0.7.1
 shinylive==0.2.2
-six @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
-smmap==5.0.0
+shinyswatch==0.4.2
 sniffio==1.3.1
 starlette==0.32.0.post1
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
 typing_extensions==4.10.0
-tzdata==2022.7
-tzlocal==4.2
 uc-micro-py==1.0.3
-urllib3==1.26.13
-userpath==1.8.0
+urllib3==2.2.1
 uvicorn==0.27.1
-validators==0.20.0
 watchfiles==0.21.0
 wcwidth==0.2.13
 websockets==12.0
-zipp==3.11.0
