--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ mdurl==0.1.2
 packaging==23.2
 prompt-toolkit==3.0.36
 pydantic==1.10.14
-pydantic_core==2.16.3
+pydantic-core==2.16.3
 python-multipart==0.0.9
 questionary==2.0.1
 requests==2.31.0
@@ -28,7 +28,7 @@ shinylive==0.2.2
 shinyswatch==0.4.2
 sniffio==1.3.1
 starlette==0.32.0.post1
-typing_extensions==4.10.0
+typing-extensions==4.10.0
 uc-micro-py==1.0.3
 urllib3==2.2.1
 uvicorn==0.27.1
