--- a/requirements.txt
+++ b/requirements.txt
@@ -5,30 +5,21 @@ anyio==4.3.0
     #   starlette
     #   watchfiles
 appdirs==1.4.4
-    # via
-    #   shiny
-    #   shinylive
+    # via shiny
 asgiref==3.7.2
     # via shiny
 click==8.1.7
     # via
     #   shiny
-    #   shinylive
     #   uvicorn
-future==1.0.0
-    # via lzstring
 h11==0.14.0
     # via uvicorn
 htmltools==0.5.1
-    # via
-    #   shiny
-    #   shinyswatch
+    # via shiny
 idna==3.6
     # via anyio
 linkify-it-py==2.0.3
     # via shiny
-lzstring==1.0.4
-    # via shinylive
 markdown-it-py==3.0.0
     # via
     #   mdit-py-plugins
@@ -38,23 +29,15 @@ mdit-py-plugins==0.4.0
 mdurl==0.1.2
     # via markdown-it-py
 packaging==23.2
-    # via
-    #   htmltools
-    #   shinyswatch
+    # via htmltools
 prompt-toolkit==3.0.36
     # via questionary
 pydantic==1.10.14
 python-multipart==0.0.9
     # via shiny
-python-version==0.0.2
 questionary==2.0.1
     # via shiny
 shiny==0.7.1
-    # via
-    #   shinylive
-    #   shinyswatch
-shinylive==0.2.2
-shinyswatch==0.4.2
 sniffio==1.3.1
     # via anyio
 starlette==0.32.0.post1
@@ -64,8 +47,6 @@ typing-extensions==4.10.0
     #   htmltools
     #   pydantic
     #   shiny
-    #   shinylive
-    #   shinyswatch
 uc-micro-py==1.0.3
     # via linkify-it-py
 uvicorn==0.27.1
