Added unit tests using shiny's integration playwright functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ tests = [
   'httpx',
   'shinylive',
   'shinyswatch',
-  'playwrite'
+  'playwright',
+  'pytest-playwright'
 ]
 
 [project.urls]
