--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # shinylive
 shinylive/
 shinyapps/
+package-lock.json
+package.json
+playwright.config.ts
 
 .vscode/
 
@@ -164,3 +167,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
