--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -26,7 +26,9 @@ jobs:
         python -m pip install --upgrade pip 
         python -m pip install -e '.[test]'
     - name: Ensure browsers are installed
-      run: python -m playwright install --with-deps
+      run: |
+        python -m pip install playwright
+        python -m playwright install --with-deps
     - name: Install package
       run: |
         python -m pip install -e .
