--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -31,9 +31,10 @@ jobs:
         python -m playwright install --with-deps
     - name: Install package
       run: |
-        python -m pip install -e .
+        python -m pip install -e '.[test]'
     - name: Test with webkit
       run: |
+        
         pytest tests --numprocesses auto --browser webkit
     - name: Test with firefox
       run: |
