working on getting playwright working actions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ tests = [
   'shinylive',
   'shinyswatch',
   'playwright',
-  'pytest-playwright'
+  'pytest-playwright',
+  'pytest-xdist',
 ]
 
 [project.urls]
