--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -8,46 +8,40 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright/python:v1.45.0-jammy
     steps:
-    - uses: actions/checkout@v4
-    # - uses: actions/setup-node@v4
-    #   with:
-    #     node-version: lts/*
-    # - name: Install dependencies
-    #   run: npm ci
-    # - name: Install Playwright Browsers
-    #   run: npx playwright install --with-deps
-
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
-    - name: Install package and testing libraries
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-        python -m pip install --upgrade pip 
-        python -m pip install -e '.[test]'
-    - name: Ensure browsers are installed
-      run: |
-        source venv/bin/activate
-        python -m pip install playwright
-        python -m playwright install --with-deps
-    - name: Test with webkit
-      run: |
-        source venv/bin/activate
-        pytest tests --numprocesses auto --browser webkit
-    - name: Test with firefox
-      run: |
-        source venv/bin/activate
-        pytest tests --numprocesses auto--browser firefox
-    - name: Test with chromium
-      run: |
-        source venv/bin/activate
-        pytest tests --numprocesses auto --browser chromium
-    # - uses: actions/upload-artifact@v4
-    #   if: always()
-    #   with:
-    #     name: playwright-report
-    #     path: playwright-report/
-    #     retention-days: 30
+        - uses: actions/checkout@v4
+        - name: Setup Python
+          uses: actions/setup-python@v4
+          with:
+            python-version: '3.9,3.10,3.11,3.12'
+        - name: Install package and testing libraries
+          run: |
+            python -m venv venv
+            source venv/bin/activate
+            python -m pip install --upgrade pip 
+            python -m pip install -e '.[test]'
+        - name: Ensure browsers are installed
+          run: |
+            source venv/bin/activate
+            python -m pip install playwright
+            python -m playwright install --with-deps
+        - name: Test with webkit
+          run: |
+            source venv/bin/activate
+            pytest tests --numprocesses auto --browser webkit
+        - name: Test with firefox
+          run: |
+            source venv/bin/activate
+            pytest tests --numprocesses auto--browser firefox
+        - name: Test with chromium
+          run: |
+            source venv/bin/activate
+            pytest tests --numprocesses auto --browser chromium
+        # - uses: actions/upload-artifact@v4
+        #   if: always()
+        #   with:
+        #     name: playwright-report
+        #     path: playwright-report/
+        #     retention-days: 30
