added retries for flaky tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 ; addopts = --headed --slowmo 500
 ; addopts = --timeout 1000ms
-addopts = --numprocesses auto
+addopts = --numprocesses auto --reruns 5
