--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -20,19 +20,19 @@ jobs:
           run: |
             python -m pip install --upgrade pip 
             python -m pip install -e '.[tests]'
-        - name: Ensure browsers are installed
-          run: |
-            python -m pip install playwright
-            python -m playwright install --with-deps
+        # - name: Ensure browsers are installed
+        #   run: |
+        #     python -m pip install playwright
+        #     python -m playwright install --with-deps
         - name: Test with webkit
           run: |
-            pytest tests --numprocesses auto --browser webkit
+            pytest tests --numprocesses auto --reruns 5 --browser webkit
         - name: Test with firefox
           run: |
-            pytest tests --numprocesses auto--browser firefox
+            pytest tests --numprocesses auto --reruns 5 --browser firefox
         - name: Test with chromium
           run: |
-            pytest tests --numprocesses auto --browser chromium
+            pytest tests --numprocesses auto --reruns 5 --browser chromium
         # - uses: actions/upload-artifact@v4
         #   if: always()
         #   with:
