--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "View and server modules to facility shinylive authentication usin
 readme = "README.md"
 
 dependencies = [
-  'shiny',
+  'shiny >= 1.0.0',
   'pydantic < 2.0',
 ]
 
