Progress on figuring out how to test shinylive with playwright

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ shinyapps/
 package-lock.json
 package.json
 playwright.config.ts
+pyodide/
+pyodide-*
+staging/*
+!staging/dependencies
 
 .vscode/
 
